--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>António Baptista</h1>
-							<p>Com este site espero mostrar os 3 trabalhos que mais gostei de fazer, seija trabalhos manuais ao digitais.  </p>
+							<p>Com este site espero mostrar os 3 trabalhos que mais gostei de fazer, seja trabalhos manuais ao digitais.  </p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Projetos</a></li>
 							</ul>
