--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									<h2>Projeto de Desenho</h2>
 									<p>Modelo nu.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Mais detailhes</a></li>
+										<li><a href="generic.html" class="button">Mais detalhes</a></li>
 									</ul>
 								</div>
 							</div>
@@ -63,7 +63,7 @@
 									<h2>Projeto de Escultura</h2>
 									<p>2, 4 e 7 pedras na mão.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Mais detailhes</a></li>
+										<li><a href="generic.html" class="button">Mais detalhes</a></li>
 									</ul>
 								</div>
 							</div>
@@ -75,7 +75,7 @@
 									<h2>Projeto de Pintura</h2>
 									<p>A Ironia/Paródia.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Mais detailhes</a></li>
+										<li><a href="generic.html" class="button">Mais detalhes</a></li>
 									</ul>
 								</div>
 							</div>
