--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Projeto de Pintura</h2>
-									<p>A Ironia/Paródia.</p>
+									<p>Auto-retrato</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Mais detalhes</a></li>
 									</ul>
